# BigMPICompat

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
include/: big-mpi-compat.h  big_mpi_compat.h
source/: mpiinfo.cxx
tests/: broadcast.cxx  common.h  datatype.cxx  io.cxx  native-io.cxx  native-sendrecv.cxx  sendrecv.cxx
